--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -1,7 +1,48 @@
-.card{
+.product{
     height: 508px;
-    border: 2px solid rgb(212, 208, 208);
+    border: 1px solid #95A0A7;
+    border-radius: 8px;
+    position: relative;
 }
-.card img{
+.product img{
+    width:286px;
+    height:286px;
+    padding: 7px;
+}
+.product-name{
+    margin-top: 0;
+    margin-bottom: 0;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 25px;
+    letter-spacing: 0.0015em;
+    color: #0E161A;
+}
+.product-info{
+    padding:  0 14px;
+}
+.product-price{
+    margin-top: 5px;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 20px;
+    letter-spacing: 0.0015em;
+    color: #0E161A;
+}
+.product p{
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.btn{
     width: 100%;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+    background: #FFE0B3;
+    border: 1px solid #95A0A7;
+    border-radius: 0px 0px 8px 8px;
 }
