--- a/src/components/shop/Shop.css
+++ b/src/components/shop/Shop.css
@@ -11,5 +11,6 @@
     gap: 45px;
 }
 .cart-container{
-    background-color: rgba(255, 153, 0, 0.4);
+    background: #FFE0B3;
+    text-align: center;
 }
