--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -3,9 +3,10 @@
     border: 1px solid #95A0A7;
     border-radius: 8px;
     position: relative;
+    margin: 0 auto;
 }
 .product img{
-    width:286px;
+    width:100%;
     height:286px;
     padding: 7px;
 }
@@ -37,7 +38,7 @@
     margin-bottom: 0;
     margin-top: 0;
 }
-.btn{
+.btn-addToCart{
     width: 100%;
     box-sizing: border-box;
     position: absolute;
@@ -45,4 +46,9 @@
     background: #FFE0B3;
     border: 1px solid #95A0A7;
     border-radius: 0px 0px 8px 8px;
+}
+@media screen and (max-width: 668px){
+    .product{
+        margin: 0 20px ;
+    }
 }
